5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1575_1326.log
== TEST (2019-03-12 11:41:00) 
-- CODE:
75
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:41:04) 
-- CODE:
75
-- EXECUTION TIME:
0.178824
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:41:47) 
-- CODE:
75
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:41:53) 
-- CODE:
75
-- EXECUTION TIME:
0.205606
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:43:41) 
-- CODE:
prubr(75)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prubr(75)
NameError: name 'prubr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:43:58) 
-- CODE:
print(75)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:44:01) 
-- CODE:
print(75)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:44:05) 
-- CODE:
print(75)
-- EXECUTION TIME:
0.124679
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
